Change color on backfrace to fix issue on IOS device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
     border-radius: 15px;
     backface-visibility: hidden;
 }
-.front-card {
+.back-card {
     background: blue;
 }
 
